syntax = "proto3";

package fhers;

message Ciphertext {
    repeated bytes c = 1;
    bytes seed = 2;
}

message KeySwitchingKey {
    repeated bytes c0 = 1;
    bytes seed = 2;
    uint32 size = 3;
}

message RelinearizationKey {
    KeySwitchingKey ksk = 1;
}

message GaloisKey {
    KeySwitchingKey ksk = 1;
    uint32 exponent = 2;
}

message EvaluationKey {
    RelinearizationKey rk = 1;
    repeated GaloisKey gk = 2;
}

message Parameters {
    uint32 degree = 1;
    repeated uint64 moduli = 2;
    uint64 plaintext = 3;
    uint32 variance = 4;
}